--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - '18081:80'
       - '18443:443'
     volumes:
-      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
+      - "${WORKSPACE}/apps/money-tracker-ui/jenkins/nginx-default.conf:/etc/nginx/conf.d/default.conf"
       - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
@@ -19,7 +19,7 @@ services:
     ports:
       - '18082:80'
     volumes:
-      - ./nginx-demo.conf:/etc/nginx/conf.d/default.conf
+      - "${WORKSPACE}/apps/money-tracker-ui/jenkins/nginx-default.conf:/etc/nginx/conf.d/default.conf"
       - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
