--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   money-tracker-ui:
     container_name: clematis-money-tracker-ui
@@ -7,7 +6,7 @@ services:
       - '18081:80'
       - '18443:443'
     volumes:
-      - "${WORKSPACE}/apps/money-tracker-ui/jenkins/nginx-default.conf:/etc/nginx/conf.d/default.conf"
+      - /home/jenkins/workspace/${workspacePath}/apps/money-tracker-ui/jenkins/nginx-default.conf:/etc/nginx/conf.d/default.conf
       - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
@@ -19,7 +18,7 @@ services:
     ports:
       - '18082:80'
     volumes:
-      - "${WORKSPACE}/apps/money-tracker-ui/jenkins/nginx-default.conf:/etc/nginx/conf.d/default.conf"
+      - /home/jenkins/workspace/${workspacePath}/apps/money-tracker-ui/jenkins/nginx-demo.conf:/etc/nginx/conf.d/default.conf
       - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
