[+] Switched to Keycloak HTTPS

--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -9,7 +9,7 @@ server {
 
       location ~* ^/auth/(.*) {
            proxy_http_version 1.1;
-           proxy_pass http://192.168.1.157:8080/$1;
+           proxy_pass https://192.168.1.157:443/$1;
       }
 
       location ~* ^/api/ {
