--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -33,7 +33,7 @@ server {
 
     location ~* ^/auth/(.*) {
         proxy_http_version 1.1;
-        proxy_pass http://192.168.1.157:8080/$1;
+        proxy_pass https://192.168.1.157:443/$1;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
