--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -31,28 +31,24 @@ server {
     expires           0;
     add_header        Cache-Control private;
 
-    location ~* ^/auth/(.*) {
+    location ~ ^/auth/(.*) {
         proxy_http_version 1.1;
         proxy_pass https://192.168.1.157:443/$1;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location ~* ^/api/ {
         proxy_http_version 1.1;
         proxy_pass http://192.168.1.118:18085;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
     }
 
     location ~* ^/info/(.*) {
         proxy_http_version 1.1;
         proxy_pass http://192.168.1.118:18085/$1;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
     }
 
     # redirect server error pages to the static page /40x.html
