[*] Adjusted Nginx/Keycloak

--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -34,7 +34,7 @@ server {
     location ~ ^/auth/(.*) {
 
         # Add JavaScript MIME type header only for Keycloak's JS files
-        location ~* ^/auth/.*\.(?:js|mjs)$ {
+        location ~ ^/auth/.*\.(?:js|mjs)$ {
             proxy_pass https://192.168.1.157/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
