--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -34,8 +34,8 @@ server {
     location ~ ^/auth/(.*) {
 
         # Add JavaScript MIME type header only for Keycloak's JS files
-        location ~ ^/auth/.*\.(?:js|mjs)$ {
-            proxy_pass https://192.168.1.157/;
+        location ~ \.(?:js|mjs)$ {
+            proxy_pass https://192.168.1.157;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
