--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -31,17 +31,16 @@ server {
     expires           0;
     add_header        Cache-Control private;
 
-    location ~ ^/auth/(.*) {
+    # Handle Keycloak JavaScript files
+    location ~ ^/auth/(.*\.(?:js|mjs)) {
+        proxy_pass https://192.168.1.157:443/$1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        # Add JavaScript MIME type header only for Keycloak's JS files
-        location ~ \.(?:js|mjs)$ {
-            proxy_pass https://192.168.1.157;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            add_header Content-Type application/javascript;
-        }
+    location ~ ^/auth/(.*) {
 
         # Handle all other Keycloak paths
         proxy_http_version 1.1;
