--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -32,15 +32,22 @@ server {
     add_header        Cache-Control private;
 
     # Handle Keycloak JavaScript files
-    location ~ ^/auth/(.*\.(?:js|mjs)) {
+    location ~* ^/?auth/(.+\.(?:js|css|html|png|jpg|jpeg|gif|ico)) {
         proxy_pass https://192.168.1.157:443/$1;
-        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header Host $host;
+
+        # Caching for static resources
+        proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 
-    location ~ ^/auth/(.*) {
+
+    location ~* ^/auth/(.*) {
 
         # Handle all other Keycloak paths
         proxy_http_version 1.1;
