--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -32,8 +32,8 @@ server {
     add_header        Cache-Control private;
 
     # Handle Keycloak JavaScript files
-    location ~* ^/?auth/(.+\.(?:js|css|html|png|jpg|jpeg|gif|ico)) {
-        proxy_pass https://192.168.1.157:443/$1;
+    location ~* ^/auth/ {
+        proxy_pass https://192.168.1.157:443;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
