--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -2,7 +2,7 @@ server {
     # Redirect HTTP to HTTPS
     listen 80 default_server;
     server_name _;
-    return 301 https://$host$request_uri;
+    return 301 https://$host:18443/$request_uri;
 }
 
 server {
@@ -31,7 +31,7 @@ server {
     expires           0;
     add_header        Cache-Control private;
 
-    location /auth/ {
+    location ~* ^/auth/ {
         proxy_pass https://192.168.1.157:443;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
