--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -13,13 +13,25 @@ server {
       }
 
       location ~* ^/api/ {
-           proxy_http_version 1.1;
-           proxy_pass http://192.168.1.118:18086;
+          proxy_http_version 1.1;
+          proxy_pass http://192.168.1.118:18086;
+          proxy_set_header   Host $host;
+          proxy_set_header   X-Forwarded-Host $host;
+          proxy_set_header   X-Forwarded-Server $host;
+          proxy_set_header   X-Forwarded-Proto $scheme;
+          proxy_set_header   X-Forwarded-Port $server_port;
+          proxy_set_header   X-Real-IP $remote_addr;
       }
 
       location ~* ^/info/(.*) {
-           proxy_http_version 1.1;
-           proxy_pass http://192.168.1.118:18086/$1;
+          proxy_http_version 1.1;
+          proxy_pass http://192.168.1.118:18086/$1;
+          proxy_set_header   Host $host;
+          proxy_set_header   X-Forwarded-Host $host;
+          proxy_set_header   X-Forwarded-Server $host;
+          proxy_set_header   X-Forwarded-Proto $scheme;
+          proxy_set_header   X-Forwarded-Port $server_port;
+          proxy_set_header   X-Real-IP $remote_addr;
       }
 
       # redirect server error pages to the static page /40x.html
