--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - '18081:80'
       - '18443:443'
     volumes:
-      - "/home/jenkins/workspace/Money Tracker UI Deployment/apps/money-tracker-ui/jenkins/nginx-default.conf:/etc/nginx/conf.d/default.conf"
+      - "nginx-default.conf:/etc/nginx/conf.d/default.conf"
       - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
@@ -19,7 +19,7 @@ services:
       - '18082:80'
       - '18444:443'
     volumes:
-      - "/home/jenkins/workspace/Money Tracker UI Deployment/apps/money-tracker-ui/jenkins/nginx-demo.conf:/etc/nginx/conf.d/default.conf"
+      - "nginx-demo.conf:/etc/nginx/conf.d/default.conf"
       - ssl_certs:/usr/local/openresty/nginx/ssl:ro
     networks:
       - clematis
