--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -52,7 +52,7 @@ server {
         proxy_set_header   Host $host;
         proxy_set_header   X-Forwarded-Host $host;
         proxy_set_header   X-Forwarded-Server $host;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-Proto https;
         proxy_set_header   X-Forwarded-Port $server_port;
         proxy_set_header   X-Real-IP $remote_addr;
     }
@@ -63,7 +63,7 @@ server {
         proxy_set_header   Host $host;
         proxy_set_header   X-Forwarded-Host $host;
         proxy_set_header   X-Forwarded-Server $host;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-Proto https;
         proxy_set_header   X-Forwarded-Port $server_port;
         proxy_set_header   X-Real-IP $remote_addr;
     }
