--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -53,7 +53,7 @@ server {
         proxy_set_header   X-Forwarded-Host $host;
         proxy_set_header   X-Forwarded-Server $host;
         proxy_set_header   X-Forwarded-Proto https;
-        proxy_set_header   X-Forwarded-Port $server_port;
+        proxy_set_header   X-Forwarded-Port 18443;
         proxy_set_header   X-Real-IP $remote_addr;
     }
 
@@ -64,7 +64,7 @@ server {
         proxy_set_header   X-Forwarded-Host $host;
         proxy_set_header   X-Forwarded-Server $host;
         proxy_set_header   X-Forwarded-Proto https;
-        proxy_set_header   X-Forwarded-Port $server_port;
+        proxy_set_header   X-Forwarded-Port 18443;
         proxy_set_header   X-Real-IP $remote_addr;
     }
 
