--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.13",
-    "@angular/cdk": "^19.2.13",
-    "@angular/common": "^19.2.13",
-    "@angular/compiler": "^19.2.13",
-    "@angular/core": "^19.2.13",
-    "@angular/forms": "^19.2.13",
-    "@angular/localize": "^19.2.13",
-    "@angular/material": "^19.2.13",
-    "@angular/material-moment-adapter": "^19.2.13",
-    "@angular/platform-browser": "^19.2.13",
-    "@angular/platform-browser-dynamic": "^19.2.13",
-    "@angular/router": "^19.2.13",
-    "@fortawesome/angular-fontawesome": "^1.0.0",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@angular/animations": "20.3.0",
+    "@angular/cdk": "20.2.3",
+    "@angular/common": "20.3.0",
+    "@angular/compiler": "20.3.0",
+    "@angular/core": "20.3.0",
+    "@angular/forms": "20.3.0",
+    "@angular/localize": "20.3.0",
+    "@angular/material": "20.2.3",
+    "@angular/material-moment-adapter": "20.2.3",
+    "@angular/platform-browser": "20.3.0",
+    "@angular/platform-browser-dynamic": "20.3.0",
+    "@angular/router": "20.3.0",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@lagoshny/ngx-hateoas-client": "^3.9.0",
     "@ngneat/content-loader": "^7.0.0",
-    "@nx/angular": "^21.1.2",
-    "angular8-yandex-maps": "^19.0.0",
+    "@nx/angular": "21.5.2",
+    "angular8-yandex-maps": "^20.0.0",
     "dayjs": "latest",
-    "echarts": "^5.5.1",
-    "keycloak-angular": "^19.0.2",
+    "keycloak-angular": "^20.0.0",
     "keycloak-js": "^26.2.0",
     "moment": "^2.30.1",
-    "ngx-echarts": "^16.2.0",
+    "ngx-echarts": "^20.0.2",
+    "echarts": "^6.0.0",
     "rxjs": "~7.8.1",
     "sass": "^1.79.3",
     "sass-loader": "^13.3.3",
@@ -46,45 +46,46 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.13",
-    "@angular-devkit/core": "^19.2.13",
-    "@angular-devkit/schematics": "^19.2.13",
-    "@angular/cli": "^19.2.13",
-    "@angular/compiler-cli": "^19.2.13",
-    "@angular/language-service": "^19.2.13",
-    "@nx/devkit": "^21.1.2",
-    "@nx/eslint": "^21.1.2",
-    "@nx/eslint-plugin": "^21.1.2",
-    "@nx/jest": "^21.1.2",
-    "@nx/js": "^21.1.2",
-    "@nx/playwright": "^21.1.2",
-    "@nx/workspace": "^21.1.2",
+    "@angular-devkit/build-angular": "20.3.1",
+    "@angular-devkit/core": "20.3.1",
+    "@angular-devkit/schematics": "20.3.1",
+    "@angular/cli": "~20.2.0",
+    "@angular/compiler-cli": "20.3.0",
+    "@angular/language-service": "20.3.0",
+    "@nx/devkit": "21.5.2",
+    "@nx/eslint": "21.5.2",
+    "@nx/eslint-plugin": "21.5.2",
+    "@nx/jest": "21.5.2",
+    "@nx/js": "21.5.2",
+    "@nx/playwright": "21.5.2",
+    "@nx/workspace": "21.5.2",
     "@playwright/test": "^1.47.2",
-    "@schematics/angular": "^18.2.5",
+    "@schematics/angular": "20.2.2",
     "@swc-node/register": "^1.10.9",
     "@swc/core": "^1.7.26",
     "@swc/helpers": "^0.5.13",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "30.0.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@typescript-eslint/utils": "^8.32.1",
+    "@typescript-eslint/eslint-plugin": "8.43.0",
+    "@typescript-eslint/parser": "8.43.0",
+    "@typescript-eslint/utils": "8.43.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-html": "^8.1.3",
     "eslint-plugin-playwright": "^2.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "^14.5.5",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-preset-angular": "14.6.1",
     "jsonc-eslint-parser": "^2.4.0",
-    "ng-packagr": "^19.2.2",
-    "nx": "^21.1.2",
+    "ng-packagr": "20.2.0",
+    "nx": "21.5.2",
     "postcss": "^8.5.3",
     "postcss-url": "^10.1.3",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "5.9.2",
+    "jest-util": "30.0.5"
   }
 }
