--- a/package.json
+++ b/package.json
@@ -12,80 +12,84 @@
     "postinstall": "node ./decorate-angular-cli.js"
   },
   "private": true,
+  "overrides": {
+    "ora": "5.4.1"
+  },
   "dependencies": {
-    "@angular/animations": "20.3.0",
-    "@angular/cdk": "20.2.3",
-    "@angular/common": "20.3.0",
-    "@angular/compiler": "20.3.0",
-    "@angular/core": "20.3.0",
-    "@angular/forms": "20.3.0",
-    "@angular/localize": "20.3.0",
-    "@angular/material": "20.2.3",
-    "@angular/material-moment-adapter": "20.2.3",
-    "@angular/platform-browser": "20.3.0",
-    "@angular/platform-browser-dynamic": "20.3.0",
-    "@angular/router": "20.3.0",
-    "@fortawesome/angular-fontawesome": "^3.0.0",
-    "@fortawesome/fontawesome-svg-core": "^7.0.1",
-    "@fortawesome/free-solid-svg-icons": "^7.0.1",
-    "@lagoshny/ngx-hateoas-client": "^3.9.0",
+    "@angular/animations": "21.1.1",
+    "@angular/cdk": "21.1.1",
+    "@angular/common": "21.1.1",
+    "@angular/compiler": "21.1.1",
+    "@angular/core": "21.1.1",
+    "@angular/forms": "21.1.1",
+    "@angular/localize": "21.1.1",
+    "@angular/material": "21.1.1",
+    "@angular/material-moment-adapter": "21.1.1",
+    "@angular/platform-browser": "21.1.1",
+    "@angular/platform-browser-dynamic": "21.1.1",
+    "@angular/router": "21.1.1",
+    "@fortawesome/angular-fontawesome": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@lagoshny/ngx-hateoas-client": "^21.0.1",
     "@ngneat/content-loader": "^7.0.0",
-    "@nx/angular": "21.5.2",
-    "angular8-yandex-maps": "^20.0.0",
+    "@nx/angular": "22.4.1",
+    "angular8-yandex-maps": "^21.0.0",
     "dayjs": "latest",
-    "keycloak-angular": "^20.0.0",
-    "keycloak-js": "^26.2.0",
+    "keycloak-angular": "^21.0.0",
+    "keycloak-js": "^26.2.2",
     "moment": "^2.30.1",
-    "ngx-echarts": "^20.0.2",
+    "ngx-echarts": "^21.0.0",
     "echarts": "^6.0.0",
-    "rxjs": "~7.8.1",
-    "sass": "^1.79.3",
-    "sass-loader": "^13.3.3",
-    "tailwindcss": "^3.4.17",
-    "tslib": "^2.7.0",
-    "zone.js": "^0.15.1"
+    "rxjs": "~7.8.2",
+    "sass": "^1.97.3",
+    "sass-loader": "^16.0.6",
+    "tailwindcss": "^4.1.18",
+    "tslib": "^2.8.1",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.3.1",
-    "@angular-devkit/core": "20.3.1",
-    "@angular-devkit/schematics": "20.3.1",
-    "@angular/cli": "~20.2.0",
-    "@angular/compiler-cli": "20.3.0",
-    "@angular/language-service": "20.3.0",
-    "@nx/devkit": "21.5.2",
-    "@nx/eslint": "21.5.2",
-    "@nx/eslint-plugin": "21.5.2",
-    "@nx/jest": "21.5.2",
-    "@nx/js": "21.5.2",
-    "@nx/playwright": "21.5.2",
-    "@nx/workspace": "21.5.2",
-    "@playwright/test": "^1.47.2",
-    "@schematics/angular": "20.2.2",
-    "@swc-node/register": "^1.10.9",
-    "@swc/core": "^1.7.26",
-    "@swc/helpers": "^0.5.13",
+    "@angular-devkit/build-angular": "21.1.1",
+    "@angular-devkit/core": "21.1.1",
+    "@angular-devkit/schematics": "21.1.1",
+    "@angular/cli": "~21.1.1",
+    "@angular/compiler-cli": "21.1.1",
+    "@angular/language-service": "21.1.1",
+    "@nx/devkit": "22.4.1",
+    "@nx/eslint": "22.4.1",
+    "@nx/eslint-plugin": "22.4.1",
+    "@nx/jest": "22.4.1",
+    "@nx/js": "22.4.1",
+    "@nx/playwright": "22.4.1",
+    "@nx/workspace": "22.4.1",
+    "@playwright/test": "^1.58.0",
+    "@schematics/angular": "21.1.1",
+    "@swc-node/register": "^1.11.1",
+    "@swc/core": "^1.15.10",
+    "@swc/helpers": "^0.5.18",
     "@types/jest": "30.0.0",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "8.43.0",
-    "@typescript-eslint/parser": "8.43.0",
-    "@typescript-eslint/utils": "8.43.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.27.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-html": "^8.1.3",
-    "eslint-plugin-playwright": "^2.2.0",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
-    "jest-preset-angular": "14.6.1",
-    "jsonc-eslint-parser": "^2.4.0",
-    "ng-packagr": "20.2.0",
-    "nx": "21.5.2",
-    "postcss": "^8.5.3",
+    "@types/node": "25.0.10",
+    "@typescript-eslint/eslint-plugin": "8.54.0",
+    "@typescript-eslint/parser": "8.54.0",
+    "@typescript-eslint/utils": "8.54.0",
+    "autoprefixer": "^10.4.23",
+    "@tailwindcss/postcss": "4.1.18",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-html": "^8.1.4",
+    "eslint-plugin-playwright": "^2.5.1",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
+    "jest-preset-angular": "16.0.0",
+    "jsonc-eslint-parser": "^2.4.2",
+    "ng-packagr": "21.1.0",
+    "nx": "22.4.1",
+    "postcss": "^8.5.6",
     "postcss-url": "^10.1.3",
-    "prettier": "^2.8.8",
-    "ts-jest": "29.4.1",
+    "prettier": "^3.8.1",
+    "ts-jest": "29.4.6",
     "ts-node": "^10.9.2",
-    "typescript": "5.9.2",
-    "jest-util": "30.0.5"
+    "typescript": "5.9.3",
+    "jest-util": "30.2.0"
   }
 }
