--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -47,6 +47,21 @@ server {
 
 
     location ~* ^/api/ {
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin "$http_origin";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept";
+            add_header Access-Control-Allow-Credentials "true";
+            add_header Vary "Origin";
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
+
+        add_header Access-Control-Allow-Origin "$http_origin";
+        add_header Access-Control-Allow-Credentials "true";
+        add_header Vary "Origin";
+
         proxy_http_version 1.1;
         proxy_pass http://192.168.1.118:18085;
         proxy_set_header   Host $host;
