--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -1,51 +1,100 @@
 server {
+    # Redirect HTTP to HTTPS
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$host:18443/$request_uri;
+}
 
-      listen     80 default_server;
-      root /var/www/money-tracker-ui;
+server {
+    listen 443 ssl default_server;
+    server_name _;
+    root /var/www/money-tracker-ui;
 
-      # Disabled caching so the browser won't cache the site.
-      expires           0;
-      add_header        Cache-Control private;
+    # SSL configuration for OpenResty
+    ssl_certificate /usr/local/openresty/nginx/ssl/certificate.crt;
+    ssl_certificate_key /usr/local/openresty/nginx/ssl/private.key;
 
-      location ~* ^/auth/(.*) {
-           proxy_http_version 1.1;
-           proxy_pass https://192.168.1.157:443/$1;
-      }
+    # Recommended SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
 
-      location ~* ^/api/ {
-          proxy_http_version 1.1;
-          proxy_pass http://192.168.1.118:18086;
-          proxy_set_header   Host $host;
-          proxy_set_header   X-Forwarded-Host $host;
-          proxy_set_header   X-Forwarded-Server $host;
-          proxy_set_header   X-Forwarded-Proto $scheme;
-          proxy_set_header   X-Forwarded-Port $server_port;
-          proxy_set_header   X-Real-IP $remote_addr;
-      }
+    # SSL session settings
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
 
-      location ~* ^/info/(.*) {
-          proxy_http_version 1.1;
-          proxy_pass http://192.168.1.118:18086/$1;
-          proxy_set_header   Host $host;
-          proxy_set_header   X-Forwarded-Host $host;
-          proxy_set_header   X-Forwarded-Server $host;
-          proxy_set_header   X-Forwarded-Proto $scheme;
-          proxy_set_header   X-Forwarded-Port $server_port;
-          proxy_set_header   X-Real-IP $remote_addr;
-      }
+    # HSTS (uncomment if you're sure)
+    # add_header Strict-Transport-Security "max-age=63072000" always;
 
-      # redirect server error pages to the static page /40x.html
-      error_page 404 /404.html;
-          location = /40x.html {
-      }
+    # Disabled caching so the browser won't cache the site.
+    expires           0;
+    add_header        Cache-Control private;
 
-      # redirect server error pages to the static page /50x.html
-      error_page 500 502 503 504 /50x.html;
-          location = /50x.html {
-      }
+    location ~* ^/auth/ {
+        proxy_pass https://192.168.1.157:443;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-      location / {
-          index index.html;
-          try_files $uri $uri/ /index.html;
-      }
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_read_timeout 86400;
+    }
+
+
+    location ~* ^/api/ {
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Origin "$http_origin";
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept";
+            add_header Access-Control-Allow-Credentials "true";
+            add_header Vary "Origin";
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
+
+        add_header Access-Control-Allow-Origin "$http_origin";
+        add_header Access-Control-Allow-Credentials "true";
+        add_header Vary "Origin";
+
+        proxy_http_version 1.1;
+        proxy_pass http://192.168.1.118:18086;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Forwarded-Host $host;
+        proxy_set_header   X-Forwarded-Server $host;
+        proxy_set_header   X-Forwarded-Proto https;
+        proxy_set_header   X-Forwarded-Port 18443;
+        proxy_set_header   X-Real-IP $remote_addr;
+    }
+
+    location ~* ^/info/(.*) {
+        proxy_http_version 1.1;
+        proxy_pass http://192.168.1.118:18086/$1;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Forwarded-Host $host;
+        proxy_set_header   X-Forwarded-Server $host;
+        proxy_set_header   X-Forwarded-Proto https;
+        proxy_set_header   X-Forwarded-Port 18443;
+        proxy_set_header   X-Real-IP $remote_addr;
+    }
+
+    # redirect server error pages to the static page /40x.html
+    error_page 404 /404.html;
+        location = /40x.html {
+    }
+
+    # redirect server error pages to the static page /50x.html
+    error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+    }
+
+    location / {
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
 }
